--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,11 +1,11 @@
 {
     "name": "FAEA - Visor de Clases",
-    "short_name": "Faea",
+    "short_name": "FAEA",
     "description": "Visor de Clases de Faea",
     "start_url": "/?utm_source=homescreen",
     "background_color": "#ffffff",
     "display": "standalone",
-    "theme_color": "#3f51b5",
+    "theme_color": "#893242",
     "icons": [
         {
             "src": "/assets/imagenes/faea48.png",
@@ -13,11 +13,11 @@
         },
         {
             "src": "/assets/imagenes/faea72.png",
-            "sizes": "96x96"
+            "sizes": "72x72"
         },
         {
             "src": "/assets/imagenes/faea96.png",
-            "sizes": "128x128"
+            "sizes": "96x96"
         },
         {
             "src": "/assets/imagenes/faea144.png",
@@ -25,11 +25,11 @@
         },
         {
             "src": "/assets/imagenes/faea168.png",
-            "sizes": "192x192"
+            "sizes": "168x168"
         },
         {
             "src": "/assets/imagenes/faea192.png",
-            "sizes": "256x256"
+            "sizes": "192x192"
         }
     ]
 }
